[project]
name = "keras3-inside-deep-learning"
version = "0.1.0"
description = "Keras 3 for inside deep learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=26.3.0",
    "jax==0.9.1",
    "jupyterlab>=4.5.6",
    "keras==3.13.2",
    "matplotlib==3.10.8",
    "notebook>=7.5.5",
    "optax==0.2.7",
    "pandas>=2.2.3",
    "scikit-learn==1.8.0",
    "seaborn>=0.13.2",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm>=4.67.1",
    "ultraplot==2.1.2"
]
